# firengine

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
firengine/: config.py
firengine/features/account/: account_watcher.py
firengine/features/async_stream/: base_stream.py  ohlcv_stream.py
firengine/features/cli/: main.py
firengine/features/data_handler/: __init__.py
firengine/features/data_stream/: base_stream.py  ohlcv_stream.py  order_book_stream.py  trade_stream.py
firengine/features/exchange/: exchange_info.py  exchange_instantiation.py  exchange_utility.py
firengine/features/exchange_simulator/: __init__.py
firengine/features/exchange_utils/: exchange_utility.py
firengine/features/fire_ui/: package-lock.json  package.json
firengine/features/grafana/: config.alloy  docker-compose.yaml  ds.yaml  loki-config.yaml  prom-config.yaml
firengine/features/grafana/initdb/: init.sql
firengine/features/market_replay/: dataset_utils.py  replayer.py
firengine/features/market_simulator/: replayer.py
firengine/features/position/: simple_position.py
firengine/features/risk/: risk_manager.py
firengine/features/sandbox/: backtest_sandbox.py  trade.py
firengine/features/sandbox/backtest/: backtest_sandbox.py  backtest_trader.py
firengine/features/strategy/: null_strategy.py
firengine/features/stream/: base_stream.py  ohlcv_stream.py  order_book_stream.py  order_stream.py  private_trade_stream.py  replay_stream.py  trade_stream.py
firengine/features/streaming/: base_stream.py  ohlcv_stream.py  order_book_stream.py  private_trade_stream.py  replay_stream.py  trade_stream.py
firengine/features/trade/: order_manager.py  otoco.py
firengine/lib/: common_type.py  enumeration.py  fire_enum.py  structured_logging.py
firengine/lib/com/: poll.py  signal.py
firengine/lib/exchanges/ccxt_examples/: fetch_ticker.py  watch_built_ohlcv.py  watch_order_book  watch_ticker.py  watch_trade.py
firengine/lib/logger/: csv_logger.py  debug_logger.py
firengine/model/: data_model.py  event_model.py  trading.py
firengine/services/ingestor/: watch_ticker_service.py
firengine/utils/: credential.py  iterator.py  symbols.py  test_utils.py  timeutil.py
tests/: conftest.py
tests/features/trade/: test_order_manager.py  test_otoco_manager.py
