[project]
name = "firengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.4.65",
    "fastapi[standard]>=0.115.7",
    "kubernetes>=32.0.0",
    "plotly>=6.0.1",
    "pydantic-settings>=2.7.1",
    "pyzmq>=26.2.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = ["ruff>=0.9.3"]

[project.scripts]
fli = "firengine.cli.main:main"

[tool.uv]
package = true
